
[package]
edition = "2024"
name = "napi-nacl"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.2", features = ["tokio_rt", "napi4"] }
napi-derive = "3.5.1"
nacl = "0.5.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
dashmap = "6.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
